<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA Detector</string>
    <string name="action_settings">Settings</string>
    
    <string name="status_label">Status:</string>
    <string name="test_button">Test</string>

    <string name="menu_settings">Settings</string>
    <string name="pref_ap_config">AP configuration</string>
    <string name="pref_ssid">SSID</string>
    <string name="pref_ap1_config">AP1 config</string>
    <string name="pref_ap1_mac_addr">AP1 MAC address</string>
    <string name="pref_ap1_password">AP1 password</string>
    <string name="pref_ap2_config">AP2 config</string>
    <string name="pref_ap2_mac_addr">AP2 MAC address</string>
	<string name="pref_ap2_password">AP2 password</string>
	<string name="pref_use_wpa2">WPA2</string>
	<string name="pref_server_config">Server configuration</string>
	<string name="pref_server_ip">Server IP</string>
	<string name="pref_server_port">Server port</string>
	<string name="pref_use_ssl">Use SSL</string>

</resources>